--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-tutorial",
+  "name": "node_workshop_project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
